--- a/css/projects.css
+++ b/css/projects.css
@@ -57,7 +57,7 @@ main .screenshots img  {
 .projectCard {
     display: flex;
     width: 275px;
-    height: 650px;
+    height: 600px;
     padding: 1rem;
     flex-direction: column;
     justify-content: flex-start;
@@ -82,20 +82,19 @@ main a {
 }
 .projectCard a {
     position: absolute;
-    bottom: 1rem;
+    bottom: 3.25rem;
 }
 .projectCard a:hover, .project-btns a:hover {
     transform: translateY(-4px);
     color: var(--clr-primary-900);
 }
-
 .projectContainer img {
     width: 100%;
     height: 135px;
     object-fit: cover;
     border-radius: 5px;
     transition: filter 0.5s;
-    margin: 1rem 0 2rem 0;
+    margin: 1rem 0;
     filter: contrast(80%) drop-shadow(1px 2px 4px #474747) grayscale(100%);
 }
 
@@ -108,7 +107,11 @@ main a {
 .project-btns a {
     margin-right: 1rem;
 }
-
+.projectCard .media {
+    position: absolute;
+    bottom: 1rem;
+    margin: 0;
+}
 .wave-top {
     aspect-ratio: 905/105;
     filter: drop-shadow(0 -1px 15px var(--clr-primary-300));
@@ -154,9 +157,13 @@ main a {
         margin: 1rem 1.5rem;
         padding: 1.5rem;
     }
-    .projectCard a {
+    .projectCard .see-more-btn,
+    .projectCard .media {
         position: relative;
-        bottom: 0;
+        bottom: auto;
+    }
+    .projectCard .media {
+        margin: 1rem 0 0 0;
     }
     .projectContainer img {
         height: auto;
@@ -166,7 +173,7 @@ main a {
     }
 }
 @media screen and (max-width:480px) {
-    
+
     main h1 {
         font-size: 3rem;
         line-height: 1;
@@ -187,8 +194,5 @@ main a {
     main .screenshots img {
         width: 100%;
         margin: 1rem 0;
-    }
-    .projectCard {
-        height: fit-content;
     }
 }
