--- a/css/about.css
+++ b/css/about.css
@@ -22,6 +22,10 @@
 #about h2.subheading {
     align-self: center;
 }
+#about h5.subheading,
+#about .skills-list p {
+    margin-left: 2rem;
+}
 #about h2,
 #about h1 {
     margin: 1rem 0;
