--- a/css/contact.css
+++ b/css/contact.css
@@ -16,6 +16,7 @@
     height: 70vh;
     max-height: 800px;
     background-color: var(--clr-primary-200);
+    padding: 0 20vw;
 }
 #contact h3 {
     margin: 3rem 0 2rem 0;
@@ -84,6 +85,7 @@
 @media screen and (max-width:820px) {
     #contact {
         height: 40vh;
+        padding: 1rem 5rem;
     }
     #contact form input,
     #contact form textarea {
