--- a/css/fonts.css
+++ b/css/fonts.css
@@ -51,8 +51,8 @@ li {
     list-style: circle;
 }
 .subheading {
-    font-family: 'Knewave', cursive;
-    /* font-weight: lighter; */
+    /* font-family: 'Knewave', cursive; */
+    font-family: Garamond, Georgia, serif;
     color: var(--clr-primary-400);
     line-height: 1.25;
     margin: 1rem 0;
